<resources>
    <string name="app_name">MessMate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sakshi Sindhuja</string>
    <string name="nav_header_subtitle">sakshi.sindhuja@jssate.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_food">View the Mess Menu</string>
    <string name="menu_complaint">File a Complain</string>
    <string name="menu_splash">About Us</string>

    <string name="app_main_greeting">Welcome to MessMate, Sakshi!</string>
    <string name="item_menu_greeting">Here\'s the list of all your meals</string>
    <string name="complaint_greeting">Sorry for the issue, please report here</string>
    <string name="app_main_heading_meals">Here are your meals for the day!</string>
    <string name="app_main_heading_complaints">These are complaints you registered</string>

    <string name="meal_breakfast">Breakfast</string>
    <string name="meal_lunch">Lunch</string>
    <string name="meal_dinner">Dinner</string>
    <string name="meal_icon_description">Meal Icon</string>

    <string name="input_complaint_summary_placeholder">Complaint Summary</string>
    <string name="input_complaint_detail_placeholder">Please describe the problem here.</string>
    <string name="input_complaint_emergency_switch">Address Immediately!</string>
    <string name="input_complaint_submission_button">Submit Complaint</string>
    <string name="input_complaint_acknowledgement">Sorry about that, we will respond ASAP.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jssate_logo_desc">JSSATE Logo</string>
    <string name="department_of_computer_science">Department of Computer Science</string>
    <string name="mess_management_android_app_by">Mess Management Android App by:</string>
    <string name="sakshi_sindhuja">Sakshi</string>
    <string name="_1js19cs143">1JS19CS143</string>
    <string name="sneha_mondal">Sneha Mondal</string>
    <string name="_1js19cs170">1JS19CS170</string>
    <string name="start_app">Start App</string>
    <string name="my_name">Sakshi Sindhuja</string>
</resources>
