<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_splash">

    <fragment
        android:id="@+id/nav_splash"
        android:name="me.sakshisindhuja.messmate.ui.splash.SplashFragment"
        android:label="@string/menu_splash"
        tools:layout="@layout/fragment_splash" />

    <fragment
        android:id="@+id/nav_home"
        android:name="me.sakshisindhuja.messmate.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_food"
        android:name="me.sakshisindhuja.messmate.ui.food.FoodFragment"
        android:label="@string/menu_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/nav_complaint"
        android:name="me.sakshisindhuja.messmate.ui.complaint.ComplaintFragment"
        android:label="@string/menu_complaint"
        tools:layout="@layout/fragment_complaint" />

</navigation>